# kestrel-feature-parametric-self

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: TWO_BRAIN_ARCHITECTURE.md
kestrel_feature_parametric_self/: __init__.py  component.yaml  corpus.py  cycle.py  feature.py  fidelity.py  local_mlx_adapter.py  sleep_hook.py  text_types.py
tests/: test_corpus.py  test_cycle.py  test_feature.py  test_fidelity.py  test_persistence.py  test_registration.py  test_self_management.py  test_sleep_hook.py  test_trainer.py
