[project]
name = "kestrel-feature-parametric-self"
version = "0.2.0"
description = "Owned parametric self for Kestrel Sovereign agents — a per-agent local model nightly-finetuned on the agent's own experience"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11,<3.15"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    # The Feature base class + ToolResult come from the SDK; the neutral
    # training lifecycle types (TrainingState/TrainingStatus) and the sleep-hook
    # surface come from core. Floor raised to 0.28.0: this version registers its
    # sleep hook via the core ``agent.sleep_hooks`` list (kestrel-sovereign
    # #1784), which first ships in 0.28.0 — a hard contract, not advisory.
    "kestrel-sovereign>=0.28.0,<1",
    "kestrel-sovereign-sdk>=0.14.1,<1",
    # The MLX LoRA trainer is Apple-Silicon only and imported lazily, so it is
    # platform-gated: it installs on arm64 macOS and is simply absent elsewhere
    # (LocalMLXAdapter.is_available() returns False, no blind fallback). This
    # keeps Linux installs and CI green without a darwin-only wheel.
    "mlx-lm>=0.31; sys_platform == 'darwin' and platform_machine == 'arm64'",
    # NB: the corpus builder reads reflection's plaintext output tables directly
    # (loose coupling, no import), so kestrel-feature-reflection is an *optional*
    # runtime companion (see component.yaml), not a hard dependency.
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.1.0",
    "pytest-timeout>=2.3.1",
]

[project.entry-points."kestrel_sovereign.features"]
ParametricSelfFeature = "kestrel_feature_parametric_self:ParametricSelfFeature"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kestrel_feature_parametric_self"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
